# gender_predicted

./: README.md  pyproject.toml
nb/: model.ipynb  score.py
