[tool.poetry]
name = "gender-predicted"
version = "0.1.0"
description = ""
authors = ["ju4nsepulveda <juan.sepulveda.z@ab-inbev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
db-dtypes = "^1.1.1"
matplotlib = "^3.8.2"
matplotlib-venn = "^0.11.9"
seaborn = "^0.13.0"
pyarrow = "9.0.0"
google-cloud-bigquery = "^3.13.0"
pandas-gbq = "^0.19.2"
google-cloud-storage = "^2.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
